--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -80,11 +80,11 @@
                 </div>
 
                     <div class="layout vertical">        
-                        <div class="button self-start flex">
+                        <!--div class="button self-start flex">
                             <paper-button noink on-tap="onMyAccount"><iron-icon icon="vaadin-icons:user">
                                 
                             </iron-icon>&nbsp&nbspMy Account</paper-button>
-                        </div>
+                        </div-->
                         
                         <div class="button self-start">
                             <paper-button noink on-tap="onInvite"><iron-icon icon="aq-icons:person-add"></iron-icon>&nbsp&nbspInvite a Friend</paper-button>
