--- a/src/components/editor/aq-editor-sidebar-log.html
+++ b/src/components/editor/aq-editor-sidebar-log.html
@@ -8,7 +8,7 @@
 
 	<style>	
 		#logcontainer {
-			background-color: #262626;
+			
 			color:white;
 			height:100%;
 		}	
@@ -93,7 +93,7 @@
 	<style>
 		p {
 			font-size:11px;
-			color:white;
+			color: black;
 			margin-bottom: 0px;
 		}
 
@@ -115,6 +115,7 @@
 		#item {
 			min-width: 12px;
 			padding-right: 5px;
+			border-bottom: 1px solid #e5e5e5;
 		}
 
 	</style>
